k8s/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sirius-ingress
spec:
  ingressClassName: nginx
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: 50m
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
  rules:
    - host: hack.siriusapi.online
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sirius-main--web
                port:
                  number: 80
